clean up pan-tilt scan page, fix image alignment

--- a/subpages/subpage.css
+++ b/subpages/subpage.css
@@ -62,7 +62,7 @@ body {
 }
 
 .description {
-  font-size: 20px;
+/*  font-size: 20px;*/
 }
 
 
@@ -183,17 +183,26 @@ a.greenLink:hover, a.greenLink:visited {
   margin-right: auto;
 }
 
+.photos img {
+  width:15%;
+  aspect-ratio: 3/2;
+  object-fit: contain;
+  mix-blend-mode: color-burn;
+}
+
 .projectImage2 {
-  max-width: 30vw;
-  max-height: 30vw;
-  width: auto;
-  height: auto;
+  max-width: 20em;
+  max-height: 20em;
+  height: 15em;
+  aspect-ratio: 3/2;
+  object-fit: contain;
 }
 
 .projectImageBox {
   display: inline-block;
   width: 30vw;
-  height: 30vw;
+  margin-bottom: 1.5em;
+  text-align: top;
 }
 
 .caption2 {
@@ -204,6 +213,7 @@ a.greenLink:hover, a.greenLink:visited {
   width: auto;
   margin-left: auto;
   margin-right: auto;
+  vertical-align: top;
 }
   
   
